[REFACTOR BREAKING] Decouple JWTService from ProfileService, deprecating many features